# TranslateR

./: .gitattributes  .gitignore  .gitlab-ci.yml  AGENTS.md  CHANGELOG.md  CHECKLIST.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE.md  QUICKSTART.md  README.md  TRANSLATING.md
.githooks/: pre-commit  pre-push
LICENSES/: README.md
docs/plans/: curtpme-publisher-timestamp-verification.md
docs/wiki/: Development.md  Downloads-and-Installation.md  History-and-Restore.md  Home.md  License-and-Fonts.md  Maintainer-Guide.md  Multiagent-Workflow.md  PO-Preservation.md  Release-Process.md  TPatch-Format.md  Translator-Guide.md  Troubleshooting.md  Validation-and-Status-Legend.md
i18n/: README.md  en.po  fr.po  translater.pot  简体中文.po
scripts/: install-git-hooks.ps1  install-git-hooks.sh
scripts/ci/: coverage.ps1  coverage.sh  github-release.py  gitlab-release.py  package-i18n.py  package-unix.sh  package-windows.ps1  prepare-release.py  prepush.ps1  prepush.sh  setup-linux.sh  sha256sums.py  sign-windows-artifact.ps1  test-windows-signature-policy.ps1  verify-windows-signature.ps1  windows-signature-policy.ps1
scripts/i18n/: generate-translater-po.py
src/: app.rs  i18n.rs  lib.rs  main.rs  test_support.rs  update.rs  workflow.rs
src/history/: mod.rs  sqlite_history.rs
src/po/: ast.rs  escape.rs  header.rs  mod.rs  parser.rs  stats.rs  validate.rs  writer.rs
src/project/: config.rs  document_store.rs  mod.rs  scanner.rs
src/ui/: app_shell.rs  display.rs  editor_panel.rs  file_panel.rs  fonts.rs  input_diagnostics.rs  message_list.rs  mod.rs  settings.rs  status_bar.rs  top_bar.rs
src/util/: atomic_save.rs  hashing.rs  mod.rs  paths.rs
src/vcs/: diff.rs
test-po/: translation.tpatch
tests/: core_coverage.rs  font_coverage.rs  history_patch_workflow.rs  i18n_catalog.rs  po_corpus.rs  po_edit_validate.rs  workflow_files.rs
tests/fixtures/: gettext-po-samples.METADATA.md
