[package]
name = "translater"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1"
directories = "6"
eframe = "0.34"
egui = "0.34"
flate2 = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rfd = "0.17"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
similar = "2"
tar = "0.4"
tempfile = "3"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "local-offset"] }
walkdir = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }

[target.'cfg(target_os = "macos")'.dependencies]
eframe = { version = "0.34", features = ["glow"] }

[dev-dependencies]
insta = "1"
pretty_assertions = "1"
ttf-parser = "0.25"
